Attempt to extend xom elements class
Goal is to add Iterator functionality.

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,3 +1,7 @@
+libs.absolutelayout.classpath=\
+    ${base}/absolutelayout/AbsoluteLayout.jar;\
+    ${base}/absolutelayout/xom-1.2.10.jar
+libs.absolutelayout.displayName=XOM 1.2.10
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
