--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Cogimag.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
-excludes=
+excludes=**/junk/*
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=false
 javac.processorpath=\
@@ -57,7 +57,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=Keyboard utility
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
